Convirtiendo las variables de cadenas de texto a numéricas

--- a/Leccion9.ipynb
+++ b/Leccion9.ipynb
@@ -30,8 +30,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-01-13T18:22:18.077940Z",
-     "start_time": "2025-01-13T18:21:41.625462Z"
+     "end_time": "2025-01-13T18:47:03.257116Z",
+     "start_time": "2025-01-13T18:46:23.746151Z"
     }
    },
    "cell_type": "code",
@@ -42,13 +42,85 @@
    ],
    "id": "7a29e4cecbd668fc",
    "outputs": [],
-   "execution_count": 7
+   "execution_count": 16
   },
   {
    "metadata": {},
    "cell_type": "markdown",
    "source": "## 2- Realizar los calculos correspondientes",
    "id": "b651e2a5131bb5c"
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-01-13T18:47:19.291136Z",
+     "start_time": "2025-01-13T18:47:19.277880Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "float(a)",
+   "id": "1db65d3ee0b84ddf",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "7.3"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 18
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-01-13T18:47:42.827407Z",
+     "start_time": "2025-01-13T18:47:42.821884Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "float(b)",
+   "id": "25f111b87c9a8b3f",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "12.1"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 20
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-01-13T18:47:40.769805Z",
+     "start_time": "2025-01-13T18:47:40.760378Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "float(c)",
+   "id": "b9c5713315d69147",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "6.7"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 19
   },
   {
    "metadata": {
@@ -116,16 +188,38 @@
   {
    "metadata": {},
    "cell_type": "markdown",
-   "source": "### Nota: Aunque hemos almacenado un número en la variable, python está interpretando que son cadenas de texto (string o str). Si solamente utilizamos la función \"input\" python interpreta que el contenido es de tipo cadena de texto, por lo que debemos especificar si es un dato numérico de tipo entero \"int\" o flotante \"float\"",
+   "source": "### Nota: Aunque hemos almacenado un número en las variables a, b y c, python está interpretando que son cadenas de texto (string o str). Pues, si solamente utilizamos la función \"input\" python interpreta que el contenido es de tipo cadena de texto, por lo que, debemos especificar si es un dato numérico de tipo entero \"int\" o flotante \"float\" al ingresar la variable. Además, si nos fijamos en la suma lo que se está realizando es una concatenación, pues los datos como dijimos son de tipo cadenas de textos\n",
    "id": "dd6d2014593694d1"
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-01-13T18:36:06.464893Z",
+     "start_time": "2025-01-13T18:36:06.456318Z"
+    }
+   },
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
-   "source": "",
-   "id": "4833bc247060ee13"
+   "source": [
+    "## Ejemplo de que se está concatenando en vez de sumar\n",
+    "print(suma)"
+   ],
+   "id": "4833bc247060ee13",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7.312.16.7\n"
+     ]
+    }
+   ],
+   "execution_count": 10
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "## Convirtiendo las variables de cadenas de texto a numéricas: Después de la sección 2- Realizar los calculos correspondientes, se introducira el tipo de variable llamado \"float\" que cambiara las variables a numéricas. Ejemplo: float(a), float(b), float(c)",
+   "id": "bf1ddae3c0fa5037"
   }
  ],
  "metadata": {
