--- a/Leccion9.ipynb
+++ b/Leccion9.ipynb
@@ -30,8 +30,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-01-13T18:47:03.257116Z",
-     "start_time": "2025-01-13T18:46:23.746151Z"
+     "end_time": "2025-01-13T19:05:45.280805Z",
+     "start_time": "2025-01-13T19:05:14.834339Z"
     }
    },
    "cell_type": "code",
@@ -42,7 +42,7 @@
    ],
    "id": "7a29e4cecbd668fc",
    "outputs": [],
-   "execution_count": 16
+   "execution_count": 34
   },
   {
    "metadata": {},
@@ -51,105 +51,55 @@
    "id": "b651e2a5131bb5c"
   },
   {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-01-13T18:47:19.291136Z",
-     "start_time": "2025-01-13T18:47:19.277880Z"
-    }
-   },
-   "cell_type": "code",
-   "source": "float(a)",
-   "id": "1db65d3ee0b84ddf",
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "7.3"
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "execution_count": 18
-  },
-  {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-01-13T18:47:42.827407Z",
-     "start_time": "2025-01-13T18:47:42.821884Z"
-    }
-   },
-   "cell_type": "code",
-   "source": "float(b)",
-   "id": "25f111b87c9a8b3f",
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "12.1"
-      ]
-     },
-     "execution_count": 20,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "execution_count": 20
-  },
-  {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-01-13T18:47:40.769805Z",
-     "start_time": "2025-01-13T18:47:40.760378Z"
-    }
-   },
-   "cell_type": "code",
-   "source": "float(c)",
-   "id": "b9c5713315d69147",
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "6.7"
-      ]
-     },
-     "execution_count": 19,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "execution_count": 19
-  },
-  {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-01-13T18:22:18.130849Z",
-     "start_time": "2025-01-13T18:22:18.105675Z"
-    }
-   },
+   "metadata": {},
    "cell_type": "code",
    "source": [
-    "suma = a + b + c\n",
-    "multip = a * b * c\n",
-    "multip_div = a * b / c"
+    "a = float(a)\n",
+    "b = float(b)\n",
+    "c = float(c)"
    ],
-   "id": "f673012244ee61b4",
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "can't multiply sequence by non-int of type 'str'",
-     "output_type": "error",
-     "traceback": [
-      "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
-      "\u001B[1;31mTypeError\u001B[0m                                 Traceback (most recent call last)",
-      "Cell \u001B[1;32mIn[8], line 2\u001B[0m\n\u001B[0;32m      1\u001B[0m suma \u001B[38;5;241m=\u001B[39m a \u001B[38;5;241m+\u001B[39m b \u001B[38;5;241m+\u001B[39m c\n\u001B[1;32m----> 2\u001B[0m multip \u001B[38;5;241m=\u001B[39m \u001B[43ma\u001B[49m\u001B[43m \u001B[49m\u001B[38;5;241;43m*\u001B[39;49m\u001B[43m \u001B[49m\u001B[43mb\u001B[49m \u001B[38;5;241m*\u001B[39m c\n\u001B[0;32m      3\u001B[0m multip_div \u001B[38;5;241m=\u001B[39m a \u001B[38;5;241m*\u001B[39m b \u001B[38;5;241m/\u001B[39m c\n",
-      "\u001B[1;31mTypeError\u001B[0m: can't multiply sequence by non-int of type 'str'"
-     ]
+   "id": "1db65d3ee0b84ddf",
+   "outputs": [],
+   "execution_count": 35
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-01-13T19:06:35.830042Z",
+     "start_time": "2025-01-13T19:06:35.826706Z"
     }
-   ],
-   "execution_count": 8
+   },
+   "cell_type": "code",
+   "source": "suma = a + b + c",
+   "id": "f673012244ee61b4",
+   "outputs": [],
+   "execution_count": 40
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-01-13T19:06:37.592780Z",
+     "start_time": "2025-01-13T19:06:37.588386Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "multipl = a * b * c",
+   "id": "3ab043b402e5dad5",
+   "outputs": [],
+   "execution_count": 41
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-01-13T19:06:42.278010Z",
+     "start_time": "2025-01-13T19:06:42.272399Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "multipl_div = a * b / c",
+   "id": "e8c340d605585c06",
+   "outputs": [],
+   "execution_count": 43
   },
   {
    "metadata": {},
@@ -160,8 +110,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-01-13T18:25:12.860694Z",
-     "start_time": "2025-01-13T18:25:12.838834Z"
+     "end_time": "2025-01-13T19:05:45.461819Z",
+     "start_time": "2025-01-13T19:05:45.454837Z"
     }
    },
    "cell_type": "code",
@@ -175,15 +125,15 @@
     {
      "data": {
       "text/plain": [
-       "str"
+       "float"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 9
+   "execution_count": 37
   },
   {
    "metadata": {},
@@ -194,8 +144,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-01-13T18:36:06.464893Z",
-     "start_time": "2025-01-13T18:36:06.456318Z"
+     "end_time": "2025-01-13T19:05:45.476376Z",
+     "start_time": "2025-01-13T19:05:45.472086Z"
     }
    },
    "cell_type": "code",
@@ -209,11 +159,53 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "7.312.16.7\n"
+      "26.099999999999998\n"
      ]
     }
    ],
-   "execution_count": 10
+   "execution_count": 38
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-01-13T19:08:33.612269Z",
+     "start_time": "2025-01-13T19:08:33.606537Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "print(multipl)",
+   "id": "a73382c75647d31c",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "591.811\n"
+     ]
+    }
+   ],
+   "execution_count": 44
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-01-13T19:08:38.258300Z",
+     "start_time": "2025-01-13T19:08:38.253514Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "print(multipl_div)",
+   "id": "f6cc9150d4ca4c2b",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "13.183582089552239\n"
+     ]
+    }
+   ],
+   "execution_count": 45
   },
   {
    "metadata": {},
