Imprimir la tabla

--- a/Leccion9.ipynb
+++ b/Leccion9.ipynb
@@ -212,6 +212,51 @@
    "cell_type": "markdown",
    "source": "## Convirtiendo las variables de cadenas de texto a numéricas: Después de la sección 2- Realizar los calculos correspondientes, se introducira el tipo de variable llamado \"float\" que cambiara las variables a numéricas. Ejemplo: float(a), float(b), float(c)",
    "id": "bf1ddae3c0fa5037"
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "## 3- Imprimir la tabla",
+   "id": "eac72876a8105b42"
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-01-13T19:25:54.215061Z",
+     "start_time": "2025-01-13T19:25:54.205777Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "# Imprimir primera línea\n",
+    "print(\"a,b,c\\t\\t\", str(a)+\", \" +str(b)+\", \"+ str(c))\n",
+    "# Segunda línea\n",
+    "print(\"a+b+c\\t\\t\", str(suma))\n",
+    "# Tercera línea\n",
+    "print(\"a*b*c\\t\\t\", str(multipl))\n",
+    "# Cuarta línea\n",
+    "print(\"a*b/c\\t\\t\", str(multipl_div))"
+   ],
+   "id": "23b89fbbb21cf07",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a,b,c\t\t 7.3, 12.1, 6.7\n",
+      "a+b+c\t\t 26.099999999999998\n",
+      "a*b*c\t\t 591.811\n",
+      "a*b/c\t\t 13.183582089552239\n"
+     ]
+    }
+   ],
+   "execution_count": 52
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "",
+   "id": "2f4393dbb31b943c"
   }
  ],
  "metadata": {
