Imprimir la tabla

--- a/11_SENTENCIAS_IF.ipynb
+++ b/11_SENTENCIAS_IF.ipynb
@@ -60,11 +60,78 @@
   },
   {
    "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "## 2- if...elif...else\n",
+    "Tomar el puntaje obtenido por el estudiante e imprimir en pantalla lo siguiente dependiendo del resultado:\n",
+    "- puntaje >= 95: \"Nivel superior\"\n",
+    "- puntaje >= 80 y <95: \"Nivel alto\"\n",
+    "- puntaje >= 60 y <80: \"Nivel medio\"\n",
+    "- puntaje <60: \"Nivel bajo\""
+   ],
+   "id": "109b37af8b8187bc"
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-01-14T19:17:06.705472Z",
+     "start_time": "2025-01-14T19:16:59.176729Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "puntaje = float(input(\"Ingrese el puntaje obtenido: \"))",
+   "id": "48f312f49ab9e8ec",
+   "outputs": [],
+   "execution_count": 5
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-01-14T19:17:09.007032Z",
+     "start_time": "2025-01-14T19:17:09.000571Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "# if...elif...else\n",
+    "if puntaje >= 95:\n",
+    "    print(\"Nivel superior\")\n",
+    "elif puntaje >= 80:\n",
+    "    print(\"Nivel alto\")\n",
+    "elif puntaje >= 60:\n",
+    "    print(\"Nivel medio\")\n",
+    "else:\n",
+    "    print(\"Nivel bajo\")"
+   ],
+   "id": "24099cc7a1629aca",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Nivel alto\n"
+     ]
+    }
+   ],
+   "execution_count": 6
+  },
+  {
+   "metadata": {},
    "cell_type": "code",
    "outputs": [],
    "execution_count": null,
-   "source": "",
-   "id": "8556c820c34f2227"
+   "source": [
+    "# Otra alternativa\n",
+    "mensaje = \"Nivel bajo\"\n",
+    "if puntaje >= 95:\n",
+    "    mensaje = \"Nivel superior\"\n",
+    "elif puntaje >= 80:\n",
+    "    mensaje = \"Nivel alto\"\n",
+    "elif puntaje >= 60:\n",
+    "    mensaje = \"Nivel medio\"\n",
+    "print(mensaje)"
+   ],
+   "id": "7a436137e829b96c"
   }
  ],
  "metadata": {
