--- a/11_SENTENCIAS_IF.ipynb
+++ b/11_SENTENCIAS_IF.ipynb
@@ -116,10 +116,26 @@
    "execution_count": 6
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-01-14T19:22:36.437724Z",
+     "start_time": "2025-01-14T19:22:30.685267Z"
+    }
+   },
    "cell_type": "code",
+   "source": "puntaje = float(input(\"Ingrese el puntaje obtenido: \"))",
+   "id": "933551ddccb9f34b",
    "outputs": [],
-   "execution_count": null,
+   "execution_count": 7
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-01-14T19:22:39.101686Z",
+     "start_time": "2025-01-14T19:22:39.091574Z"
+    }
+   },
+   "cell_type": "code",
    "source": [
     "# Otra alternativa\n",
     "mensaje = \"Nivel bajo\"\n",
@@ -131,7 +147,17 @@
     "    mensaje = \"Nivel medio\"\n",
     "print(mensaje)"
    ],
-   "id": "7a436137e829b96c"
+   "id": "7a436137e829b96c",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Nivel bajo\n"
+     ]
+    }
+   ],
+   "execution_count": 8
   }
  ],
  "metadata": {
