Imprimir la tabla

--- a/12_PRACT_3.ipynb
+++ b/12_PRACT_3.ipynb
@@ -43,15 +43,79 @@
    "id": "505ac9b73c7da398"
   },
   {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-01-14T20:25:44.897199Z",
+     "start_time": "2025-01-14T20:25:40.456955Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "# 1- Introducir la edad del visitante\n",
+    "edad = int(input(\"Introduzca la edad del visitante: \"))"
+   ],
+   "id": "d424330ddeb9e27d",
+   "outputs": [],
+   "execution_count": 10
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-01-14T20:25:48.227585Z",
+     "start_time": "2025-01-14T20:25:48.222129Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "# 1- Calcular el costo del ticket de entrada\n",
+    "tarifa_plana = 10\n",
+    "mensaje = \"El costo de tú entrada es de 10 dólares.\\nNo tuviste ningún descuento\"\n",
+    "if edad >= 71:\n",
+    "    tarifa = tarifa_plana - tarifa_plana *10/100 # También se podía multiplicar por 0.1\n",
+    "    mensaje = f\"El costo de tú entrada es de {tarifa} dólares.\\nObtuviste un descuento de 10%\"\n",
+    "elif edad >= 56:\n",
+    "    tarifa = tarifa_plana - tarifa_plana *5/100\n",
+    "    mensaje = f\"El costo de tú entrada es de {tarifa} dólares.\\nObtuviste un descuento de 5%\"\n",
+    "elif (edad >= 5) and (edad <= 17):\n",
+    "    tarifa = tarifa_plana - tarifa_plana *20/100\n",
+    "    mensaje = f\"El costo de tú entrada es de {tarifa} dólares.\\nObtuviste un descuento de 20%\"\n",
+    "elif edad < 5:\n",
+    "    tarifa = tarifa_plana - tarifa_plana *50/100\n",
+    "    mensaje = f\"El costo de tú entrada es de {tarifa} dólares.\\nObtuviste un descuento de 50%\""
+   ],
+   "id": "e9734091fd54eeaf",
+   "outputs": [],
+   "execution_count": 11
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-01-14T20:25:49.547856Z",
+     "start_time": "2025-01-14T20:25:49.543638Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "print(mensaje)",
+   "id": "dfd57632842de001",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "El costo de tú entrada es de 9.5 dólares.\n",
+      "Obtuviste un descuento de 5%\n"
+     ]
+    }
+   ],
+   "execution_count": 12
+  },
+  {
    "metadata": {},
    "cell_type": "code",
    "outputs": [],
    "execution_count": null,
-   "source": [
-    "# 1- Introducir la edad del visitante\n",
-    "edad = int(input(\"Introduce tu edad: \"))"
-   ],
-   "id": "d424330ddeb9e27d"
+   "source": "",
+   "id": "e1f9191f86414362"
   }
  ],
  "metadata": {
