La sentencia while

--- a/14- SENTENCIA_WHILE.ipynb
+++ b/14- SENTENCIA_WHILE.ipynb
@@ -1,16 +1,71 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "initial_id",
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "metadata": {},
+   "cell_type": "markdown",
    "source": [
-    ""
-   ]
+    "# La sentencia while\n",
+    "while es una sentencia de control que permite ejecutar una porción de código de forma repetitiva mientras se cumpla una condición"
+   ],
+   "id": "599f21107a83e9ff"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": [
+    "while condicion:\n",
+    "    # Línea 1 a ejecutar\n",
+    "    # Línea 2 a ejecutar\n",
+    "    # Línea 3 a ejecutar\n",
+    "    # ....\n",
+    "    # Línea n a ejecutar"
+   ],
+   "id": "9f5baf1aaacc2e5f"
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "# Ejemplos",
+   "id": "e2c827e824240c02"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": [
+    "while True:\n",
+    "    print(\"Ejecutando código\")\n",
+    "    print(\"Ciclo infinito\")"
+   ],
+   "id": "b8b74bd27523d95b",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-01-15T01:41:47.383951Z",
+     "start_time": "2025-01-15T01:41:47.377846Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "while False:\n",
+    "    print(\"Ejecutando código\")\n",
+    "    print(\"Ciclo infinito\")"
+   ],
+   "id": "e279809dd5fb5961",
+   "outputs": [],
+   "execution_count": 2
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": "",
+   "id": "fa83c77f449c29e6"
   }
  ],
  "metadata": {
