La sentencia while

--- a/14- SENTENCIA_WHILE.ipynb
+++ b/14- SENTENCIA_WHILE.ipynb
@@ -64,7 +64,23 @@
    "cell_type": "code",
    "outputs": [],
    "execution_count": null,
-   "source": "",
+   "source": [
+    "# Un ejemplo mas elaborado: tenemos una cuenta de ahorros\n",
+    "# con inicial y diariamente hacemos un retiro\n",
+    "saldo = 1000\n",
+    "dia = 0\n",
+    "while saldo >= 0:\n",
+    "    # Actualizar el d♂a\n",
+    "    dia = dia + 1\n",
+    "    # También podemos usar la expresión más compacta: dia += 1\n",
+    "    # Entrada: monto a retirar\n",
+    "    retiro = input(\"Ingrese el monto a retirar: \")\n",
+    "    # Actualizar el saldo\n",
+    "    # saldo = saldo - retiro\n",
+    "    saldo -= retiro\n",
+    "    # Imprimir el día y el saldo disponible\n",
+    "    print(f\"Día: {dia}. saldo: {saldo} \")"
+   ],
    "id": "fa83c77f449c29e6"
   }
  ],
