Sentencia while y combinación con if

--- a/14- SENTENCIA_WHILE.ipynb
+++ b/14- SENTENCIA_WHILE.ipynb
@@ -73,7 +73,7 @@
     "saldo = 1000\n",
     "dia = 0\n",
     "while saldo >= 0:\n",
-    "    # Actualizar el d♂a\n",
+    "    # Actualizar el día\n",
     "    dia = dia + 1\n",
     "    # También podemos usar la expresión más compacta: dia += 1\n",
     "    # Entrada: monto a retirar\n",
@@ -114,7 +114,7 @@
     "saldo = 1000\n",
     "dia = 0\n",
     "while saldo >= 0:\n",
-    "    # Actualizar el d♂a\n",
+    "    # Actualizar el día\n",
     "    dia = dia + 1\n",
     "    # También podemos usar la expresión más compacta: dia += 1\n",
     "    # Entrada: monto a retirar\n",
