Ejemplos Sentencia for

--- a/15- SENTENCIA_FOR.ipynb
+++ b/15- SENTENCIA_FOR.ipynb
@@ -38,6 +38,46 @@
    "cell_type": "markdown",
    "source": "# Ejemplos",
    "id": "9c6590a01da697f4"
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-01-15T16:54:16.707615Z",
+     "start_time": "2025-01-15T16:54:16.699433Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "# 1- Imprimir cada letra de una palabra usando for\n",
+    "for letra in \"Python\":\n",
+    "    print(letra)\n",
+    "print(\"Fin\")"
+   ],
+   "id": "c3665c5bef708810",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "P\n",
+      "y\n",
+      "t\n",
+      "h\n",
+      "o\n",
+      "n\n",
+      "Fin\n"
+     ]
+    }
+   ],
+   "execution_count": 2
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": "",
+   "id": "3c2762b4698778e5"
   }
  ],
  "metadata": {
