Ejemplos Sentencia for

--- a/15- SENTENCIA_FOR.ipynb
+++ b/15- SENTENCIA_FOR.ipynb
@@ -48,7 +48,7 @@
    },
    "cell_type": "code",
    "source": [
-    "# 1- Imprimir cada letra de una palabra usando for\n",
+    "# 1- Imprimir cada letra de una palabra usando \"for\"\n",
     "for letra in \"Python\":\n",
     "    print(letra)\n",
     "print(\"Fin\")"
@@ -72,12 +72,46 @@
    "execution_count": 2
   },
   {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-01-15T16:57:11.219986Z",
+     "start_time": "2025-01-15T16:57:11.213317Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "# 2- Usando la función \"range\"\n",
+    "for numero in range(10):\n",
+    "    print(numero)"
+   ],
+   "id": "3c2762b4698778e5",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "6\n",
+      "7\n",
+      "8\n",
+      "9\n"
+     ]
+    }
+   ],
+   "execution_count": 3
+  },
+  {
    "metadata": {},
    "cell_type": "code",
    "outputs": [],
    "execution_count": null,
    "source": "",
-   "id": "3c2762b4698778e5"
+   "id": "2d8c298a5e09fc46"
   }
  ],
  "metadata": {
