Ejemplo completo Sentencia for

--- a/15- SENTENCIA_FOR.ipynb
+++ b/15- SENTENCIA_FOR.ipynb
@@ -106,12 +106,98 @@
    "execution_count": 3
   },
   {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-01-15T20:14:35.676420Z",
+     "start_time": "2025-01-15T20:14:35.612016Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "range?",
+   "id": "2d8c298a5e09fc46",
+   "outputs": [],
+   "execution_count": 1
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-01-15T20:17:51.647921Z",
+     "start_time": "2025-01-15T20:17:51.638668Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "for numero in range(1, 10,2):\n",
+    "    print(numero)"
+   ],
+   "id": "65db6292a528bef4",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "3\n",
+      "5\n",
+      "7\n",
+      "9\n"
+     ]
+    }
+   ],
+   "execution_count": 2
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-01-15T20:27:25.059346Z",
+     "start_time": "2025-01-15T20:27:25.051041Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "# Un ejemplo completo: Invertimos 1000 dólares en la bolsa de valores\n",
+    "# El interés mensual es del 0.8%. Calcular el saldo después de un año\n",
+    "\n",
+    "saldo = 1000\n",
+    "\n",
+    "interes = 0.8 / 100\n",
+    "for mes in range(1, 13):\n",
+    "    # Actualizar el saldo\n",
+    "    saldo = saldo + (saldo * interes)\n",
+    "\n",
+    "    # Imprimir en pantalla el saldo actualizado\n",
+    "    print(f\"Mes {mes}: Saldo = {saldo}\")"
+   ],
+   "id": "50f34f7e43c60589",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mes 1: Saldo = 1008.0\n",
+      "Mes 2: Saldo = 1016.064\n",
+      "Mes 3: Saldo = 1024.192512\n",
+      "Mes 4: Saldo = 1032.3860520960002\n",
+      "Mes 5: Saldo = 1040.6451405127682\n",
+      "Mes 6: Saldo = 1048.9703016368703\n",
+      "Mes 7: Saldo = 1057.3620640499653\n",
+      "Mes 8: Saldo = 1065.820960562365\n",
+      "Mes 9: Saldo = 1074.347528246864\n",
+      "Mes 10: Saldo = 1082.942308472839\n",
+      "Mes 11: Saldo = 1091.6058469406216\n",
+      "Mes 12: Saldo = 1100.3386937161465\n"
+     ]
+    }
+   ],
+   "execution_count": 3
+  },
+  {
    "metadata": {},
    "cell_type": "code",
    "outputs": [],
    "execution_count": null,
    "source": "",
-   "id": "2d8c298a5e09fc46"
+   "id": "e6b57cd265850fe4"
   }
  ],
  "metadata": {
