SENTENCIAS BREAK Y CONTINUE

--- a/16- BREAK_CONTINUE.ipynb
+++ b/16- BREAK_CONTINUE.ipynb
@@ -3,7 +3,7 @@
   {
    "metadata": {},
    "cell_type": "markdown",
-   "source": "# SENTENCIAS BREAK Y CONTINUE",
+   "source": "# Sentencias break y continue",
    "id": "842a1d94d04d908d"
   },
   {
@@ -19,7 +19,7 @@
   {
    "metadata": {},
    "cell_type": "markdown",
-   "source": "# Sentencia Break + While",
+   "source": "# Sentencia break + while",
    "id": "df0ae51d44e271f8"
   },
   {
@@ -33,7 +33,10 @@
     "    # ...\n",
     "\n",
     "    if condicion_break:\n",
-    "        break"
+    "        break\n",
+    "    # Segunda parte del código a ejecutar\n",
+    "    # ...\n",
+    "# Código a ejecutar después del while"
    ],
    "id": "e2f6d7d00061c50f"
   }
