SENTENCIAS BREAK Y CONTINUE

--- a/16- BREAK_CONTINUE.ipynb
+++ b/16- BREAK_CONTINUE.ipynb
@@ -25,8 +25,6 @@
   {
    "metadata": {},
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
    "source": [
     "while condicion_while:\n",
     "    # Primera parte del código a ejecutar\n",
@@ -38,7 +36,56 @@
     "    # ...\n",
     "# Código a ejecutar después del while"
    ],
-   "id": "e2f6d7d00061c50f"
+   "id": "e2f6d7d00061c50f",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-01-15T20:54:46.288363Z",
+     "start_time": "2025-01-15T20:53:50.076958Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "saldo = 1000\n",
+    "dia = 0\n",
+    "\n",
+    "while saldo >= 0:\n",
+    "    # Actualizar el día\n",
+    "    dia += 1\n",
+    "\n",
+    "    # Solicitar al usuario el monto a retirar\n",
+    "    retiro = int(input(\"Ingrese el monto a retirar:\"))\n",
+    "\n",
+    "    # Agregar la sentencia break\n",
+    "    if retiro > saldo:\n",
+    "        print(\"El monto de retiro es superior al saldo disponible.\")\n",
+    "        break\n",
+    "\n",
+    "    # Actualizar el saldo\n",
+    "    saldo -= retiro\n",
+    "\n",
+    "    # Imprimir en pantalla el día y el saldo\n",
+    "    print(f\"Día {dia}. Saldo {saldo}\")\n",
+    "\n",
+    "print(\"Retiro finalizado.\")"
+   ],
+   "id": "15a664ca04a9cb79",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Día 1. Saldo 400\n",
+      "Día 2. Saldo 50\n",
+      "El monto de retiro es superior al saldo disponible.\n",
+      "Retiro finalizado.\n"
+     ]
+    }
+   ],
+   "execution_count": 2
   }
  ],
  "metadata": {
