Sentencia continue + while

--- a/16- BREAK_CONTINUE.ipynb
+++ b/16- BREAK_CONTINUE.ipynb
@@ -41,12 +41,7 @@
    "execution_count": null
   },
   {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-01-15T20:54:46.288363Z",
-     "start_time": "2025-01-15T20:53:50.076958Z"
-    }
-   },
+   "metadata": {},
    "cell_type": "code",
    "source": [
     "saldo = 1000\n",
@@ -73,19 +68,115 @@
     "print(\"Retiro finalizado.\")"
    ],
    "id": "15a664ca04a9cb79",
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Día 1. Saldo 400\n",
-      "Día 2. Saldo 50\n",
-      "El monto de retiro es superior al saldo disponible.\n",
-      "Retiro finalizado.\n"
-     ]
-    }
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "# Sentencia break + for",
+   "id": "94daf431224bbf9e"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": [
+    "for variable in iterador:\n",
+    "    # Primera parte del código a ejecutar\n",
+    "    # ....\n",
+    "# Código a ejecutar después del for"
    ],
-   "execution_count": 2
+   "id": "236d04b150c3ed60",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": [
+    "for letra in \"Python\":\n",
+    "    # Imprimir cada letra\n",
+    "    print(letra)\n",
+    "\n",
+    "    # Introducir \"break\": Detener ejecución del loop si la letra es \"h\"\n",
+    "    if letra == \"h\":\n",
+    "        print(\"Hemos llegado a la letra h. Se detendrá la ejecución del loop.\")\n",
+    "        break\n",
+    "\n",
+    "    # Imprimir un separador\n",
+    "    print(\"-------\")\n",
+    "print(\"Fin del programa.\")"
+   ],
+   "id": "7f74822d8b05b34e",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "# Secuencia continue y while",
+   "id": "aa94cadb29874e0f"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": [
+    "while condicion_while:\n",
+    "    # Primera parte del código a ejecutar\n",
+    "    # ...\n",
+    "\n",
+    "    if condicion_continue:\n",
+    "        continue\n",
+    "    # Segunda parte del código a ejecutar\n",
+    "    # ...\n",
+    "# Código a ejecutar después del while"
+   ],
+   "id": "a73d502af7fe8791",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": [
+    "saldo = 1000\n",
+    "dia = 0\n",
+    "while saldo >= 0:\n",
+    "    # Modificar el dia\n",
+    "    dia += 1\n",
+    "\n",
+    "    # Ingresar el monto a retirar\n",
+    "    retiro = int(input(\"Ingrese el monto a retirar:\"))\n",
+    "\n",
+    "    # Agregar el break del ejemplo anterior para evitar retirar un monto Mayor al saldo\n",
+    "    if retiro > saldo:\n",
+    "        print(\"El monto de retiro es superior al saldo disponible.\")\n",
+    "        break\n",
+    "\n",
+    "    # No permitir al usuario retirar dinero en el día 3\n",
+    "    if dia == 3:\n",
+    "        print(\"Su cuenta está en mantenimiento. No puede retirar\")\n",
+    "        continue\n",
+    "\n",
+    "    # Actualizar el saldo\n",
+    "    saldo -= retiro\n",
+    "\n",
+    "    # Imprimir en pantalla el día y el saldo\n",
+    "    print(f\"Día {dia}. Saldo {saldo}\")\n",
+    "\n",
+    "print(\"Retiro finalizado.\")"
+   ],
+   "id": "836f251ec27e4af5",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": "",
+   "id": "a929db7f722b282b",
+   "outputs": [],
+   "execution_count": null
   }
  ],
  "metadata": {
