Sentencia continue y while

--- a/16- BREAK_CONTINUE.ipynb
+++ b/16- BREAK_CONTINUE.ipynb
@@ -136,7 +136,12 @@
    "execution_count": null
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-01-16T20:00:46.104073Z",
+     "start_time": "2025-01-16T19:58:18.779173Z"
+    }
+   },
    "cell_type": "code",
    "source": [
     "saldo = 1000\n",
@@ -167,16 +172,89 @@
     "print(\"Retiro finalizado.\")"
    ],
    "id": "836f251ec27e4af5",
-   "outputs": [],
-   "execution_count": null
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Día 1. Saldo 500\n",
+      "Día 2. Saldo 200\n",
+      "Su cuenta está en mantenimiento. No puede retirar\n",
+      "Día 4. Saldo 100\n",
+      "El monto de retiro es superior al saldo disponible.\n",
+      "Retiro finalizado.\n"
+     ]
+    }
+   ],
+   "execution_count": 1
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "# Sentencia continue y while",
+   "id": "468379f9c1053796"
   },
   {
    "metadata": {},
    "cell_type": "code",
-   "source": "",
-   "id": "a929db7f722b282b",
    "outputs": [],
-   "execution_count": null
+   "execution_count": null,
+   "source": [
+    "for variable in iterador:\n",
+    "    # Primera parte del código a ejecutar\n",
+    "    # ....\n",
+    "    if condicion_continue:\n",
+    "        continue\n",
+    "    # Segunda parte del código a ejecutar\n",
+    "    # ....\n",
+    "# Código a ejecutar después del for"
+   ],
+   "id": "ff99563c90fefdb3"
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-01-16T20:14:42.743604Z",
+     "start_time": "2025-01-16T20:14:42.736389Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "for letra in \"Python\":\n",
+    "    # Imprimir todas las letras a excepción de la \"t\n",
+    "    if letra == \"t\":\n",
+    "        print(\"Hemos llegado a la letra t y no será impresa\")\n",
+    "        continue\n",
+    "\n",
+    "    # Imprimir letra\n",
+    "    print(letra)\n",
+    "\n",
+    "    # Imprimir el separador\n",
+    "    print(\"-------\")\n",
+    "print(\"Fin del programa.\")"
+   ],
+   "id": "e6d6e51f2da96071",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "P\n",
+      "-------\n",
+      "y\n",
+      "-------\n",
+      "Hemos llegado a la letra t y no será impresa\n",
+      "h\n",
+      "-------\n",
+      "o\n",
+      "-------\n",
+      "n\n",
+      "-------\n",
+      "Fin del programa.\n"
+     ]
+    }
+   ],
+   "execution_count": 4
   }
  ],
  "metadata": {
