Práctica 4: Invirtiendo en la bolsa. Usando while

--- a/17– PRACTICA_4.ipynb
+++ b/17– PRACTICA_4.ipynb
@@ -39,11 +39,15 @@
     "    # 3.2- Imprimir en pantalla el mensaje en cada iteración\n",
     "# Imprimir el mensaje final\n",
     "\n",
-    "# Introducir el saldo inicial\n",
+    "# 1- Introducir el saldo inicial\n",
     "saldo_inicial = float(input(\"Introduzca el saldo inicial: \"))\n",
     "\n",
-    "# Introducir la tasa de interés mensual\n",
-    "tasa_interes = input(\"Introduza la tasa de interés mensual en porcentaje (Ejemplo 0.8%): \")"
+    "# 2- Introducir la tasa de interés mensual\n",
+    "tasa_interes = input(\"Introduza la tasa de interés mensual en porcentaje (Ejemplo 0.8%): \")\n",
+    "\n",
+    "# 2a- Reajustar la cadena de texto \"tasa_interes\"\n",
+    "tasa_interes = tasa_interes.replace(\"%\", \"\")\n",
+    "tasa_interes = float(tasa_interes) / 100"
    ],
    "id": "ada29fa4ffad8ff2",
    "outputs": [],
@@ -52,26 +56,26 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-01-16T20:43:59.038066Z",
-     "start_time": "2025-01-16T20:43:59.028558Z"
+     "end_time": "2025-01-16T20:49:21.500867Z",
+     "start_time": "2025-01-16T20:49:21.493330Z"
     }
    },
    "cell_type": "code",
-   "source": "type(saldo_inicial)",
+   "source": "tasa_interes.replace(\"%\", \"\")",
    "id": "1d4a174a015fe6ff",
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "float"
+       "'2.5'"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 4
+   "execution_count": 5
   }
  ],
  "metadata": {
