Implementación usando while y utilizando for, if y break

--- a/17– PRACTICA_4.ipynb
+++ b/17– PRACTICA_4.ipynb
@@ -24,12 +24,7 @@
    "id": "8ce3d33be5a21583"
   },
   {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-01-16T20:43:04.489408Z",
-     "start_time": "2025-01-16T20:42:50.232266Z"
-    }
-   },
+   "metadata": {},
    "cell_type": "code",
    "source": [
     "# 1- Introducir saldo inicial\n",
@@ -47,35 +42,88 @@
     "\n",
     "# 2a- Reajustar la cadena de texto \"tasa_interes\"\n",
     "tasa_interes = tasa_interes.replace(\"%\", \"\")\n",
-    "tasa_interes = float(tasa_interes) / 100"
+    "tasa_interes = float(tasa_interes)\n",
+    "\n",
+    "# 3- While\n",
+    "# 3a- Inicializar ganancias y mes\n",
+    "saldo = saldo_inicial\n",
+    "mes =  0\n",
+    "ganancias = saldo - saldo_inicial\n",
+    "\n",
+    "while ganancias < saldo_inicial:\n",
+    "    # 3.1- Actualizar mes, saldo y ganancias\n",
+    "    mes += 1\n",
+    "    saldo += saldo*tasa_interes/100\n",
+    "    ganancias = saldo - saldo_inicial\n",
+    "\n",
+    "    # 3.2- Imprimir el mensaje indicando mes y saldo. Se agregó la expresión \"2f\" para que python haga un redondeo a 2 cifras decimales después del punto al momento de presentar el saldo\n",
+    "    print(f'Mes: {mes}. Saldo: {saldo:.2f}')\n",
+    "# 4- Imprimir el mensaje final\n",
+    "print(f' Se requieren {mes} meses para que las ganancias sean igual al monto')"
    ],
    "id": "ada29fa4ffad8ff2",
    "outputs": [],
-   "execution_count": 3
+   "execution_count": null
   },
   {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-01-16T20:49:21.500867Z",
-     "start_time": "2025-01-16T20:49:21.493330Z"
-    }
-   },
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "# Implementación usando for, if y break",
+   "id": "4a1c39e7f8227c61"
+  },
+  {
+   "metadata": {},
    "cell_type": "code",
-   "source": "tasa_interes.replace(\"%\", \"\")",
-   "id": "1d4a174a015fe6ff",
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'2.5'"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
+   "source": [
+    "# 1- Introducir saldo inicial\n",
+    "# 2- Introducir la tasa de interés mensual\n",
+    "# 3- ciclo \"for\" por un número preestablecidos de meses:\n",
+    "    # 3.1- Actualizar el saldo y las ganancias\n",
+    "    # 3.2- Detener ejecución del ciclo si las ganancias igualan el monto inicial\n",
+    "    # 3.3- Imprimir en pantalla el mensaje en cada iteración\n",
+    "# Imprimir el mensaje final\n",
+    "\n",
+    "# 1- Introducir el saldo inicial\n",
+    "saldo_inicial = float(input(\"Introduzca el saldo inicial: \"))\n",
+    "\n",
+    "# 2- Introducir la tasa de interés mensual\n",
+    "tasa_interes = input(\"Introduza la tasa de interés mensual en porcentaje (Ejemplo 0.8%): \")\n",
+    "\n",
+    "# 2a- Reajustar la cadena de texto \"tasa_interes\"\n",
+    "tasa_interes = tasa_interes.replace(\"%\", \"\")\n",
+    "tasa_interes = float(tasa_interes)\n",
+    "\n",
+    "# Ciclo \"for\"\n",
+    "# 3a- Inicializar ganancias y el saldo\n",
+    "saldo = saldo_inicial\n",
+    "ganancias = saldo - saldo_inicial\n",
+    "for mes in range(1,201):\n",
+    "    # 3.1- Actualizar el saldo y las ganancias\n",
+    "    saldo += saldo*tasa_interes/100\n",
+    "    ganancias = saldo - saldo_inicial\n",
+    "\n",
+    "    # 3.2- Detener ejecución del ciclo si las ganancias igualan el monto inicial\n",
+    "    if ganancias >= saldo_inicial:\n",
+    "        print('Las ganacias son iguales o superiores al monto inicial')\n",
+    "        break\n",
+    "\n",
+    "    # 3.3 Imprimir mensaje en pantalla\n",
+    "    print(f'Mes: {mes}. Saldo: {saldo:.2f}')\n",
+    "\n",
+    "# 4- Imprimir el mensaje final\n",
+    "print(f'Se requieren {mes} meses para que las ganancias sean igual al monto')"
    ],
-   "execution_count": 5
+   "id": "fabac14b0e43c330",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": "",
+   "id": "19ed9221a1ea443a",
+   "outputs": [],
+   "execution_count": null
   }
  ],
  "metadata": {
